--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -61,7 +61,7 @@
   display: flex;
   align-items: center;         /* Centraliza verticalmente */
   justify-content: center;     /* Centraliza horizontalmente */
-  text-align: center;          /* Alinhamento do texto */
+  text-align: justify;          /* Alinhamento do texto */
   line-height: 1.2;            /* Espaçamento entre linhas melhorado */
   white-space: normal;         /* Permite quebra de linha */
   word-wrap: break-word;       /* Quebra palavras longas */
