--- a/presenca/lista.html
+++ b/presenca/lista.html
@@ -64,6 +64,19 @@
         <div id="resultados-busca" class="list-group mt-1"></div>
       </div>
 
+
+<div class="search-container mb-3">
+  <label for="busca-visitante" class="form-label">Buscar Visitante</label>
+  <input
+    type="text"
+    id="busca-visitante"
+    class="form-control"
+    placeholder="Digite o nome do visitante..."
+  />
+  <div id="resultados-visitante" class="list-group mt-1"></div>
+</div>
+      
+
       <button id="btn-adicionar-manual" class="btn btn-outline-secondary mb-3">
         <i class="bi bi-person-plus"></i> Adicionar Visitante
       </button>
@@ -195,6 +208,7 @@ auth.onAuthStateChanged((user) => {
 });
 
 let membrosCadastrados = [];
+let visitantesCadastrados = [];
 let presentes = [];
 
 // Funções para máscaras
@@ -278,6 +292,21 @@ function carregarMembros() {
     });
   });
 }
+
+
+
+
+function carregarVisitantes() {
+  database.ref('visitantes').once('value').then((snapshot) => {
+    visitantesCadastrados = [];
+    snapshot.forEach((child) => {
+      visitantesCadastrados.push({ id: child.key, ...child.val() });
+    });
+  });
+}
+  
+
+  
 
 function removerAcentos(str) {
   return str.normalize("NFD").replace(/[\u0300-\u036f]/g, "");
@@ -369,7 +398,9 @@ function salvarVisitante() {
   });
 }
 
-
+database.ref('visitantes/' + id).set({
+  nome, endereco, cep, bairro, cidade, estado, cristao, telefone
+});
 
 
 
