--- a/register.html
+++ b/register.html
@@ -247,7 +247,7 @@
 
   <script type="module">
   import { db, auth } from './firebase-config.js';
-  import { ref, get, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+import { ref, get, remove, update } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
   import { updatePassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
   import { registerUser, getAllUsers, deleteUser } from './users.js';
 
