--- a/register.html
+++ b/register.html
@@ -83,11 +83,15 @@
 <body>
   <!-- Verificação de Admin -->
   <script type="module">
-    import { checkAdminAuth } from './auth.js';
-    if (!await checkAdminAuth()) {
+  import { checkAdminAuth } from './auth.js';
+  (async () => {
+    const isAdmin = await checkAdminAuth();
+    if (!isAdmin) {
       window.location.href = 'index.html';
     }
-  </script>
+  })();
+</script>
+
 
   <!-- Navbar Administrativa -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
