--- a/register.html
+++ b/register.html
@@ -83,17 +83,11 @@
 <body>
   <!-- Verificação de Admin -->
   <script type="module">
-  import { checkAdminAuth } from './auth.js';
-  (async () => {
-    const isAdmin = await checkAdminAuth();
-    console.log("Admin Auth Status:", isAdmin);
-    if (!isAdmin) {
-      alert("Acesso negado! Redirecionando...");
+    import { checkAdminAuth } from './auth.js';
+    if (!await checkAdminAuth()) {
       window.location.href = 'index.html';
     }
-  })();
-</script>
-
+  </script>
 
   <!-- Navbar Administrativa -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
