--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ body {
         <span>Cadastrar Membros</span>
     </a>
 
-    <a href="listagem.html" class="nav-item admin-only" style="display: none;">
+    <a href="listagem.html" class="nav-item" data-role="admin moderador">
         <i class="fas fa-list"></i>
         <span>Lista de Membros</span>
     </a>
@@ -238,32 +238,32 @@ body {
         </div>
     </div>
 
-    <a href="presenca/lista.html" class="nav-item admin-only" style="display: none;">
+    <a href="presenca/lista.html" class="nav-item" data-role="admin moderador">
         <i class="fas fa-church"></i>
         <span>Presença Cultos</span>
     </a>
     
-    <a href="presenca/frequencia.html" class="nav-item admin-only" style="display: none;">
+    <a href="presenca/frequencia.html" class="nav-item" data-role="admin moderador">
         <i class="fas fa-chart-line"></i>
         <span>Frequência Mensal</span>
     </a>
 
-    <a href="exportar.html" class="nav-item admin-only" style="display: none;">
+    <a href="exportar.html" class="nav-item" data-role="admin moderador">
         <i class="fas fa-file-export"></i>
         <span>Exportar/Importar Dados</span>
     </a>
 
-    <a href="backup.html" class="nav-item admin-only" style="display: none;">
+    <a href="backup.html" class="nav-item" data-role="admin moderador">
         <i class="fas fa-database"></i>
         <span>Backup e Restauração</span>
     </a>
 
-    <a href="register.html" class="nav-item admin-only" style="display: none;">
+    <a href="register.html" class="nav-item" data-role="admin moderador">
         <i class="fas fa-user-plus"></i>
         <span>Gerenciar Usuários</span>
     </a>
 
-    <a href="push/notif_push.html" class="nav-item admin-only" style="display: none;">
+    <a href="push/notif_push.html" class="nav-item" data-role="admin moderador">
         <i class="fas fa-bell"></i>
         <span>Enviar Notificações</span>
     </a>
