--- a/cadastro-membros.html
+++ b/cadastro-membros.html
@@ -198,6 +198,25 @@
   
 
 
+
+  
+<script type="module">
+import { checkAuth } from './auth.js';
+import { getUserRole } from './users.js';
+
+document.addEventListener('DOMContentLoaded', async () => {
+  await checkAuth();
+  const role = await getUserRole();
+  if (!['admin','moderador'].includes(role)) {
+    alert('Acesso negado. Apenas Admins ou Moderadores.');
+    window.location.href = 'index.html';
+  }
+});
+</script>
+
+
+  
+
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const form = document.getElementById("form-membro");
