--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@ body {
         </div>
         <div class="nav-menu" id="navMenu">
             <a href="index.html" class="nav-item active"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a>
-            <a href="cadastro-membros.html" class="nav-item"><i class="fas fa-users"></i><span>Cadastrar Membros</span></a>
-            <a href="listagem.html" class="nav-item" data-role="admin moderador"><i class="fas fa-list"></i><span>Lista de Membros</span></a>
-            <a href="aniversariantes.html" class="nav-item"><i class="fas fa-birthday-cake"></i><span>Aniversariantes</span></a>
-            <a href="relogio/index.html" class="nav-item"><i class="fas fa-clock"></i><span>Relógio de Oração</span></a>
+            <a href="cadastro-membros.html" class="nav-item" data-role="admin moderador"><i class="fas fa-users"></i><span>Cadastrar Membros</span></a>
+            <a href="listagem.html" class="nav-item" data-role="admin"><i class="fas fa-list"></i><span>Lista de Membros</span></a>
+            <a href="aniversariantes.html" class="nav-item" data-role="admin moderador"><i class="fas fa-birthday-cake"></i><span>Aniversariantes</span></a>
+            <a href="relogio/index.html" class="nav-item" data-role="admin moderador"><i class="fas fa-clock"></i><span>Relógio de Oração</span></a>
             <div class="nav-item nav-dropdown">
                 <div class="nav-dropdown-header"><i class="fas fa-print"></i><span>Impressão</span><i class="fas fa-chevron-down dropdown-arrow"></i></div>
                 <div class="nav-dropdown-content">
@@ -138,12 +138,12 @@ body {
                     <a href="certificado.html" class="nav-subitem"><i class="fas fa-certificate"></i><span>Certificado</span></a>
                 </div>
             </div>
-            <a href="presenca/lista.html" class="nav-item" data-role="admin moderador"><i class="fas fa-church"></i><span>Presença Cultos</span></a>
-            <a href="presenca/frequencia.html" class="nav-item" data-role="admin moderador"><i class="fas fa-chart-line"></i><span>Frequência Mensal</span></a>
-            <a href="exportar.html" class="nav-item" data-role="admin moderador"><i class="fas fa-file-export"></i><span>Exportar/Importar Dados</span></a>
-            <a href="backup.html" class="nav-item" data-role="admin moderador"><i class="fas fa-database"></i><span>Backup e Restauração</span></a>
-            <a href="register.html" class="nav-item" data-role="admin moderador"><i class="fas fa-user-plus"></i><span>Gerenciar Usuários</span></a>
-            <a href="push/notif_push.html" class="nav-item" data-role="admin moderador"><i class="fas fa-bell"></i><span>Enviar Notificações</span></a>
+            <a href="presenca/lista.html" class="nav-item" data-role="admin"><i class="fas fa-church"></i><span>Presença Cultos</span></a>
+            <a href="presenca/frequencia.html" class="nav-item" data-role="admin"><i class="fas fa-chart-line"></i><span>Frequência Mensal</span></a>
+            <a href="exportar.html" class="nav-item" data-role="admin"><i class="fas fa-file-export"></i><span>Exportar/Importar Dados</span></a>
+            <a href="backup.html" class="nav-item" data-role="admin"><i class="fas fa-database"></i><span>Backup e Restauração</span></a>
+            <a href="register.html" class="nav-item" data-role="admin"><i class="fas fa-user-plus"></i><span>Gerenciar Usuários</span></a>
+            <a href="push/notif_push.html" class="nav-item" data-role="admin"><i class="fas fa-bell"></i><span>Enviar Notificações</span></a>
         </div>
     </div>
 
