--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ body {
             <a href="listagem.html" class="nav-item" data-role="admin"><i class="fas fa-list"></i><span>Lista de Membros</span></a>
             <a href="aniversariantes.html" class="nav-item" data-role="admin moderador"><i class="fas fa-birthday-cake"></i><span>Aniversariantes</span></a>
             <a href="relogio/index.html" class="nav-item" data-role="admin moderador"><i class="fas fa-clock"></i><span>Relógio de Oração</span></a>
-            <div class="nav-item nav-dropdown">
+            <div class="nav-item nav-dropdown" data-role="admin">
                 <div class="nav-dropdown-header"><i class="fas fa-print"></i><span>Impressão</span><i class="fas fa-chevron-down dropdown-arrow"></i></div>
                 <div class="nav-dropdown-content">
                     <a href="carteirinhas/carteirinha.html" class="nav-subitem"><i class="fas fa-id-card"></i><span>Carteirinha</span></a>
