--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
              <a href="cadastro-membros.html" class="nav-item" data-role="admin secretaria"><i class="fas fa-users"></i><span>Cadastrar Membros</span></a>
             <a href="listagem.html" class="nav-item" data-role="admin secretaria"><i class="fas fa-list"></i><span>Lista de Membros</span></a>
             <a href="aniversariantes.html" class="nav-item" data-role="admin moderador secretaria"><i class="fas fa-birthday-cake"></i><span>Aniversariantes</span></a>
-            <a href="relogio/index.html" class="nav-item" data-role="admin moderador usuario basico"><i class="fas fa-clock"></i><span>Relógio de Oração</span></a>
+            <a href="relogio/index.html" class="nav-item" data-role="admin moderador basico"><i class="fas fa-clock"></i><span>Relógio de Oração</span></a>
             <div class="nav-item nav-dropdown" data-role="admin secretaria">
                 <div class="nav-dropdown-header"><i class="fas fa-print"></i><span>Impressão</span><i class="fas fa-chevron-down dropdown-arrow"></i></div>
                 <div class="nav-dropdown-content">
