--- a/backup.html
+++ b/backup.html
@@ -275,5 +275,21 @@ function resetProgress() { setProgress(0, ""); }
 <!-- Logoff após inatividade -->
 <script type="module" src="js/session-timeout.js"></script>
 
+
+<script type="module">
+import { getUserRole } from './users.js';
+import { checkAuth } from './auth.js';
+
+document.addEventListener('DOMContentLoaded', async () => {
+    await checkAuth();
+    const role = await getUserRole();
+    if (!['admin', 'moderador'].includes(role)) {
+        alert('Acesso negado. Apenas Admins ou Moderadores.');
+        window.location.href = 'index.html';
+    }
+});
+</script>
+
+
 </body>
 </html>
