--- a/backup.html
+++ b/backup.html
@@ -126,25 +126,7 @@ body {
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-import { getDatabase, ref, get, set } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
-import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-
-const firebaseConfig = {
-  apiKey: "AIzaSyCv6pzl34tyPTARtGxV6g2AJfkrtQeA-xU",
-  authDomain: "cadastro-igreja-23042.firebaseapp.com",
-  databaseURL: "https://cadastro-igreja-23042-default-rtdb.firebaseio.com",
-  projectId: "cadastro-igreja-23042",
-  storageBucket: "cadastro-igreja-23042.appspot.com",
-  messagingSenderId: "977906864836",
-  appId: "1:977906864836:web:1a21a29f4b941ac5aeaf91"
-};
-
-const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
-const auth = getAuth(app);
-
-
+import { db } from './firebase-config.js';
 
 // Funções de backup e restauração
 document.getElementById('backup-db').addEventListener('click', async () => {
@@ -277,19 +259,22 @@ function resetProgress() { setProgress(0, ""); }
 
 
 <script type="module">
-import { getUserRole } from './users.js';
 import { checkAuth } from './auth.js';
+import { getUserRole } from './users.js';
 
 document.addEventListener('DOMContentLoaded', async () => {
-    await checkAuth();
-    const role = await getUserRole();
-    if (!['admin', 'moderador'].includes(role)) {
-        alert('Acesso negado. Apenas Admins ou Moderadores.');
-        window.location.href = 'index.html';
-    }
+  // ✅ Garante autenticação
+  const user = await checkAuth();
+  if (!user) return; // checkAuth redireciona para login se não estiver logado
+
+  // ✅ Verifica role
+  const role = await getUserRole();
+  if (!['admin', 'moderador'].includes(role)) {
+    alert('Acesso negado! Apenas Admins ou Moderadores podem acessar esta página.');
+    window.location.href = 'index.html';
+  }
 });
 </script>
-
   
 
 
